--- a/0920/Rep/3주차 과제.md
+++ b/0920/Rep/3주차 과제.md
@@ -2,7 +2,7 @@
 <h2>6. 체온 값 36.5로 초기화된 상수 bodyTemp를 double형으로 선언하라.</h2>
 A : final double bodyTemp = 36.5;
   
-<h2>7. 다음 각 항목의; 코드에서 컴파일 오류를 수정하라.</h2>
+<h2>7. 다음 각 항목의 코드에서 컴파일 오류를 수정하라.</h2>
   
 (1) while(1) {}
   
